--- a/22_09_08_03_Fetch_Test/index.html
+++ b/22_09_08_03_Fetch_Test/index.html
@@ -1,3 +1,17 @@
 <!-- Cambia el titulo -->
 <!-- Crea un contenedor -->
 <!-- De donde viene el codigo -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App</title>
+</head>
+<body>
+    <div class="container"></div>
+    <script src="./codigo.js"></script>
+</body>
+</html>
